# Sol-R

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  AUTHORS.txt  CMakeLists.txt  CPUKernel.cpp  CPUKernel.h  Consts.h  DLL_API.h  FileMarshaller.cpp  FileMarshaller.h  GPUKernel.cpp  GPUKernel.h  ImageLoader.cpp  ImageLoader.h  Logging.h  MapReader.cpp  MapReader.h  OBJReader.cpp  OBJReader.h  PDBReader.cpp  PDBReader.h  README.md  RayTracingEngine.rc  RayTracingEngine.sln  RayTracingEngine.vcxproj  RayTracingEngine.vcxproj.filters  RayTracingEngineStub.cpp  RayTracingEngineStub.h  SWCReader.cpp  SWCReader.h  jpge.cpp  jpge.h
CPU/: CPUKernel.cpp
Cuda/: CudaDataTypes.h  CudaKernel.cpp  CudaKernel.h  CudaRayTracer.cu  CudaRayTracer.h  GeometryIntersections.cuh  GeometryShaders.cuh  TextureMapping.cuh  VectorUtils.cuh
Max/: ExportOBJ.ms
OpenCL/: OpenCLKernel.cpp  OpenCLKernel.h  RayTracer.cl  RayTracer.cl.h
OpenGL/: rtgl.cpp  rtgl.h
Release/: GPUKernel.d  PDBReader.d  RayTracingEngineStub.d  makefile  sources.mk
Release/src/: GPUKernel.d  PDBReader.d  subdir.mk
Release/src/Cuda/: CudaKernel.d  CudaRayTracer.d  subdir.mk
Release/src/OpenCL/: subdir.mk
apps/: CMakeLists.txt  CudaRayTracer.vcxproj.filters  CudaRaytracer.vcxproj  Raytracer.rc  resource.h  solr.rc  solrViewer.cpp
apps/common/: Types.h  Utils.cpp  Utils.h
apps/scenes/: AnimationScene.cpp  AnimationScene.h  CausticScene.cpp  CausticScene.h  ColumnScene.cpp  ColumnScene.h  CornellBoxScene.cpp  CornellBoxScene.h  CubesScene.cpp  CubesScene.h  CylinderScene.cpp  CylinderScene.h  DoggyStyleScene.cpp  DoggyStyleScene.h  FractalScene.cpp  FractalScene.h  FractalsScene.cpp  FractalsScene.h  GalleryScene.cpp  GalleryScene.h  GraphScene.cpp  GraphScene.h  KinectFaceTrackingScene.cpp  KinectFaceTrackingScene.h  MetaballsScene.cpp  MetaballsScene.h  MoleculeScene.cpp  MoleculeScene.h  ObjScene.cpp  ObjScene.h  PerpetualMotionScene.cpp  PerpetualMotionScene.h  Scene.cpp  Scene.h  SpheresScene.cpp  SpheresScene.h  SpindizzyScene.cpp  SpindizzyScene.h  SwcScene.cpp  SwcScene.h  (+12 more)
apps/scenes/animation/: AnimationScene.cpp  AnimationScene.h  KinectFaceTrackingScene.cpp  KinectFaceTrackingScene.h  MetaballsScene.cpp  MetaballsScene.h  WaterScene.cpp  WaterScene.h
apps/scenes/experiments/: CornellBoxScene.cpp  CornellBoxScene.h  CubesScene.cpp  CubesScene.h  CylinderScene.cpp  CylinderScene.h  DoggyStyleScene.cpp  DoggyStyleScene.h  GalleryScene.cpp  GalleryScene.h  GraphScene.cpp  GraphScene.h  PerpetualMotionScene.cpp  PerpetualMotionScene.h  TransparentScene.cpp  TransparentScene.h  XmasScene.cpp  XmasScene.h  Year2013.cpp  Year2013.h
apps/scenes/games/: SpindizzyScene.cpp  SpindizzyScene.h
apps/scenes/maths/: FractalScene.cpp  FractalScene.h  FractalsScene.cpp  FractalsScene.h  TrefoilKnotScene.cpp  TrefoilKnotScene.h
apps/scenes/meshes/: ObjScene.cpp  ObjScene.h  TrianglesScene.cpp  TrianglesScene.h
apps/scenes/science/: ColumnScene.cpp  ColumnScene.h  MoleculeScene.cpp  MoleculeScene.h  SwcScene.cpp  SwcScene.h
apps/sketchup/Ruby/: sksolr.rb
apps/sketchup/SoL-R/: SoL-R-Component.skb  SoL-R-Light-Blue.skm  SoL-R-Light-Green.skm  SoL-R-Light-Low-White.skm  SoL-R-Light-Red.skm  SoL-R-Light-White.skm  SoL-R-Light-Yellow.skm  SoL_R_Light_Component.skp
cmake/: FindFreeGLUT.cmake  FindGLUT.cmake  FindOculusSDK.cmake  findCUDA.cmake  findOpenCL.cmake
medias/irt/: 0000.irt  test.irt
medias/swc/: 02a_pyramidal2aFI.CNG.swc
solr/: CMakeLists.txt  Consts.h  DLL_API.h  GPUKernel.cpp  GPUKernel.h  Logging.h  RayTracingEngineStub.cpp  RayTracingEngineStub.h  SolRStub.cpp  SolRStub.h  resource.h  types.h
solr/.svn/: wc.db
solr/cpu/: CPUKernel.cpp  CPUKernel.h
solr/cuda/: CudaDataTypes.h  CudaKernel.cpp  CudaKernel.h  CudaRayTracer.cu  CudaRayTracer.h  GeometryIntersections.cuh  TextureMapping.cuh  VectorUtils.cuh
solr/engines/: GPUKernel.cpp  GPUKernel.h
solr/engines/cpu/: CPUKernel.cpp  CPUKernel.h
solr/engines/cuda/: CudaKernel.cpp  CudaKernel.h  CudaRayTracer.cu  CudaRayTracer.h  GeometryIntersections.cuh  GeometryShaders.cuh  TextureMapping.cuh  VectorUtils.cuh  helper_cuda.h
solr/engines/opencl/: OpenCLKernel.cpp  OpenCLKernel.h  RayTracer.cl
solr/games/: MapReader.cpp  MapReader.h
solr/images/: ImageLoader.cpp  ImageLoader.h  jpgd.cpp  jpgd.h  jpge.cpp  jpge.h  tgad.cpp  tgad.h
solr/io/: FileMarshaller.cpp  FileMarshaller.h  OBJReader.cpp  OBJReader.h  PDBReader.cpp  PDBReader.h  SWCReader.cpp  SWCReader.h
solr/max/: ExportOBJ.ms
solr/opencl/: OpenCLKernel.cpp  OpenCLKernel.h  RayTracer.cl  types.h
solr/opengl/: rtgl.cpp  rtgl.h
swc/: 02a_pyramidal2aFI.CNG.swc
